# img-uploader

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/controller/: img_uploader.rs  mod.rs
src/core/: img_processing.rs  mod.rs
