[package]
name = "img-uploader"
version = "0.1.0"
authors = ["md"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
actix-web = "1.0"
futures = "0.1"
serde = "1.0.102"
reqwest = "0.9.22"
image = "0.22.3"
md5 = "0.6.1"
tokio = "0.1.22"
